crates/llvmkit-ir/tests/compile_fail/raw_phi_builder_is_unnameable.stderr
error[E0624]: method `build_int_phi` is private
  --> tests/compile_fail/raw_phi_builder_is_unnameable.rs:30:22
   |
30 |           let _int = b.build_int_phi::<i32, _>("p");
   |                        ^^^^^^^^^^^^^ private method
   |
  ::: src/ir_builder.rs
   |
   | /     pub(crate) fn build_int_phi<W, Name>(
   | |         &self,
   | |         name: Name,
   | |     ) -> IrResult<PhiInst<'ctx, W, PhiOpen, B>>
   | |     where
   | |         Name: AsRef<str>,
   | |         W: crate::int_width::StaticIntWidth,
   | |____________________________________________- private method defined here

error[E0624]: method `build_fp_phi` is private
  --> tests/compile_fail/raw_phi_builder_is_unnameable.rs:31:21
   |
31 |           let _fp = b.build_fp_phi::<f64, _>("q");
   |                       ^^^^^^^^^^^^ private method
   |
  ::: src/ir_builder.rs
   |
   | /     pub(crate) fn build_fp_phi<K, Name>(
   | |         &self,
   | |         name: Name,
   | |     ) -> IrResult<FpPhiInst<'ctx, K, PhiOpen, B>>
   | |     where
   | |         Name: AsRef<str>,
   | |         K: super::float_kind::StaticFloatKind,
   | |______________________________________________- private method defined here

error[E0624]: method `build_pointer_phi` is private
  --> tests/compile_fail/raw_phi_builder_is_unnameable.rs:32:22
   |
32 |           let _ptr = b.build_pointer_phi("r");
   |                        ^^^^^^^^^^^^^^^^^ private method
   |
  ::: src/ir_builder.rs
   |
   | /     pub(crate) fn build_pointer_phi<Name>(
   | |         &self,
   | |         name: Name,
   | |     ) -> IrResult<PointerPhiInst<'ctx, PhiOpen, B>>
   | |     where
   | |         Name: AsRef<str>,
   | |_________________________- private method defined here
